# R-Type

./: .clang-tidy  .editorconfig  .gitignore  ANetwork_8hpp.html  ANetwork_8hpp_source.html  AdaptiveFlyingAIComponent_8hpp.html  AdaptiveFlyingAIComponent_8hpp_source.html  BackgroundComponent_8hpp.html  BackgroundComponent_8hpp_source.html  BossIntroComponent_8hpp.html  BossIntroComponent_8hpp_source.html  BydoShootingAIComponent_8hpp.html  BydoShootingAIComponent_8hpp_source.html  BydoShotComponent_8hpp.html  BydoShotComponent_8hpp_source.html  CMakeLists.txt  ClientNetwork_8hpp.html  ClientNetwork_8hpp_source.html  CollidableComponent_8hpp.html  CollidableComponent_8hpp_source.html  CollisionComponent_8hpp.html  CollisionComponent_8hpp_source.html  ControllableComponent_8hpp.html  ControllableComponent_8hpp_source.html  Creator_8hpp.html  Creator_8hpp_source.html  DamageComponent_8hpp.html  DamageComponent_8hpp_source.html  Display_8hpp.html  Display_8hpp_source.html  Doxyfile  DrawableComponent_8hpp.html  DrawableComponent_8hpp_source.html  Entity_8hpp.html  Entity_8hpp_source.html  Error_8hpp.html  Error_8hpp_source.html  FlyingAIComponent_8hpp.html  FlyingAIComponent_8hpp_source.html  GameLogic_8hpp.html  (+393 more)
.github/workflows/: chocolatine.yml  compilation.yml  deploy_doc.yml
assets/doxygen/: Intro.md
assets/game/: r-typesheet5.png~  r-typesheet7.png~  script_stage_1.txt  script_stage_2.txt  script_stage_3.txt
dependencies/: CMakeLists.txt
include/: ANetwork.hpp  INetwork.hpp  Utils.hpp  constants.hpp  enums.hpp
include/Assets/: AssetLoader.hpp  TextLoader.hpp
include/ECS/: Creator.hpp  Entity.hpp
include/ECS/Components/: AdaptiveFlyingAIComponent.hpp  BackgroundComponent.hpp  BossIntroComponent.hpp  BydoShootingAIComponent.hpp  BydoShotComponent.hpp  CollidableComponent.hpp  CollisionComponent.hpp  ControllableComponent.hpp  DamageComponent.hpp  DrawableComponent.hpp  FlyingAIComponent.hpp  GravityComponent.hpp  GroundComponent.hpp  HPComponent.hpp  HitBoxComponent.hpp  HorizontalScrollComponent.hpp  ImmortalComponent.hpp  InRangeComponent.hpp  InvincibleTimerComponent.hpp  LevelComponent.hpp  MissileComponent.hpp  MissileSpawnPointComponent.hpp  PickupComponent.hpp  PositionComponent.hpp  ScoreComponent.hpp  ShootingTimerComponent.hpp  SinMovementComponent.hpp  SolidComponent.hpp  TargetComponent.hpp  TeamComponent.hpp  VelocityComponent.hpp  WalkingAIComponent.hpp  WaveBeamComponent.hpp
include/ECS/Containers/: Registry.hpp  SparseArray.hpp
include/ECS/Systems/: adaptiveFlyingAI.hpp  background.hpp  bossIntro.hpp  bydoShootingAI.hpp  collision.hpp  controller.hpp  damage.hpp  drawable.hpp  findTarget.hpp  flyingAI.hpp  gravity.hpp  ground.hpp  horizontalScroll.hpp  invincibleTimer.hpp  movement.hpp  pickup.hpp  serverEventHandler.hpp  shooting.hpp  sinMovement.hpp  solid.hpp  target.hpp  walkingAI.hpp
include/ECS/components/: ControllableComponent.hpp  DamageComponent.hpp  DrawableComponent.hpp  GravityComponent.hpp  HPComponent.hpp  HitBoxComponent.hpp  InvincibleTimerComponent.hpp  MissileComponent.hpp  PositionComponent.hpp  TeamComponent.hpp  WaveBeamComponent.hpp
include/ECS/containers/: Registry.hpp  SparseArray.hpp
include/ECS/systems/: controller.hpp  drawable.hpp  gravity.hpp  invincibleTimer.hpp  movement.hpp  shooting.hpp
include/Errors/: ComponentNotRegisteredException.hpp  RegistryNotFound.hpp  ValueNotFound.hpp
include/GameEngine/: Events.hpp  GameEngine.hpp
include/Player/: utils.hpp
include/assets/: AssetLoader.hpp
include/client/: network.hpp  r-type_client.hpp
include/client/audio/: GameAudio.hpp  GameMusic.hpp  GameSound.hpp  Music.hpp  Sound.hpp
include/client/display/: Display.hpp
include/client/network/: ClientNetwork.hpp  Error.hpp
include/gameEngine/: GameEngine.hpp
includes/: ANetwork.hpp  INetwork.hpp
includes/ECS/: Entity.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+120 more)
src/: ANetwork.cpp  CMakeLists.txt
src/Assets/: AssetLoader.cpp  CMakeLists.txt  TextLoader.cpp
src/ECS/: CMakeLists.txt  Creator.cpp  Entity.cpp
src/ECS/systems/: CMakeLists.txt  adaptiveFlyingAI.cpp  background.cpp  bossIntro.cpp  bydoShootingAI.cpp  collision.cpp  controller.cpp  damage.cpp  drawable.cpp  findTarget.cpp  flyingAI.cpp  gravity.cpp  ground.cpp  horizontalScroll.cpp  invincibleTimer.cpp  movement.cpp  pickup.cpp  serverEventHandler.cpp  shooting.cpp  sinMovement.cpp  solid.cpp  target.cpp  walkingAI.cpp
src/ECS/systems/helper/: BackgroundDrawer.cpp  CMakeLists.txt  SpriteSheetDrawer.cpp
src/GameEngine/: CMakeLists.txt  Events.cpp  GameEngine.cpp  createClientEngine.cpp  createEngine.cpp  createServerEngine.cpp
src/Player/: CMakeLists.txt  utils.cpp
src/assets/: AssetLoader.cpp  create_ressources.cmake
src/client/: CMakeLists.txt  main.cpp  network.cpp  r-type_client.cpp
src/client/audio/: CMakeLists.txt  GameAudio.cpp  GameMusic.cpp  GameSound.cpp  Music.cpp  Sound.cpp
src/client/display/: CMakeLists.txt  Display.cpp
src/client/network/: CMakeLists.txt  ClientGetters.cpp  ClientHandleMessages.cpp  ClientNetwork.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/game_logic/: CMakeLists.txt  GameLogic.cpp
src/server/network/: CMakeLists.txt  Participants.cpp  ServerNetwork.cpp  ServerTcp.cpp  recupInfo.cpp  recupInfos.cpp  sendCode.cpp  serverEventHandler.cpp
tests/: CMakeLists.txt  README.md  empty_file.cpp
tests/ECS/: CMakeLists.txt  Creator.cpp
tests/ECS/containers/: CMakeLists.txt  Registry.cpp  SparseArray.cpp
tests/ECS/containers/zipper/: CMakeLists.txt  IndexedZipper.cpp  Zipper.cpp
tests/GameEngine/: CMakeLists.txt  GameEngine.cpp
(+26 files in other folders)
